kubernetes/components/networkpolicies/external/allow-ingress-gateway-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-allow-ingress-gateway-external
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: envoy-gateway
      podSelector:
        matchLabels:
          gateway.envoyproxy.io/owning-gateway-name: external
